<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_frag2"
        tools:context=".Fragment2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/customToolbar"
                layout="@layout/custom_toolbar_frag2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linear_layout_parent_white_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_15"
                android:background="@drawable/bg_frag2_white"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/customToolbar">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_30"
                    android:layout_marginVertical="@dimen/dimen_10"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/dimen_0"
                        android:layout_height="@dimen/dimen_60"
                        android:layout_weight="1"
                        android:src="@drawable/arsenal" />

                    <TextView
                        android:layout_width="@dimen/dimen_0"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/dimen_15"
                        android:layout_weight="3"
                        android:text="@string/arsenal"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_24" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_2"
                    android:background="@color/grey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_30"
                    android:layout_marginTop="@dimen/dimen_7"
                    android:text="@string/select_type"
                    android:textSize="@dimen/text_14" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_30"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio1_select_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/vip" />

                    <RadioButton
                        android:id="@+id/radio2_select_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/with_food" />

                    <RadioButton
                        android:id="@+id/radio3_select_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/without_food" />
                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_2"
                    android:background="@color/grey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_30"
                    android:layout_marginTop="@dimen/dimen_7"
                    android:text="@string/how_many_people"
                    android:textSize="@dimen/text_14" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_30"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/counter"
                        android:layout_width="@dimen/dimen_0"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/spinner_bg"
                        android:gravity="center"
                        android:paddingHorizontal="@dimen/dimen_10"
                        android:paddingVertical="@dimen/dimen_5"
                        android:text="@string/_1"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="@dimen/dimen_0"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/_1" />

                    <com.google.android.material.slider.Slider
                        android:id="@+id/range_slider"
                        android:layout_width="@dimen/dimen_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:stepSize="1"
                        android:valueFrom="1"
                        android:valueTo="10"
                        app:labelBehavior="gone"
                        app:thumbColor="@color/teal_200"
                        app:trackColor="@color/grey" />

                    <TextView
                        android:layout_width="@dimen/dimen_0"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/_10" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_2"
                    android:background="@color/grey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_30"
                    android:layout_marginTop="@dimen/dimen_7"
                    android:text="@string/select_category"
                    android:textSize="@dimen/text_14" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_30"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio1_category"
                        android:layout_width="@dimen/dimen_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/adult" />

                    <RadioButton
                        android:id="@+id/radio2_category"
                        android:layout_width="@dimen/dimen_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/teen" />
                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_2"
                    android:background="@color/grey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_30"
                    android:layout_marginTop="@dimen/dimen_7"
                    android:text="@string/permission"
                    android:textSize="@dimen/text_14" />

                <RadioGroup
                    android:id="@+id/radio_group_permission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_30"
                    android:layout_marginBottom="@dimen/dimen_5">

                    <RadioButton
                        android:id="@+id/radio1_permission"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_0"
                        android:layout_weight="1"
                        android:text="@string/always_shirt_allowed" />

                    <RadioButton
                        android:id="@+id/radio2_permission"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_0"
                        android:layout_weight="1"
                        android:text="@string/always_support_allowed" />
                </RadioGroup>

            </LinearLayout>

            <TextView
                android:id="@+id/add_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_15"
                android:layout_marginTop="@dimen/dimen_6"
                android:text="@string/add_images"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_layout_parent_white_bg" />

            <ImageView
                android:id="@+id/upload_image"
                android:layout_width="@dimen/dimen_40"
                android:layout_height="@dimen/dimen_40"
                android:layout_marginHorizontal="@dimen/dimen_15"
                android:layout_marginVertical="@dimen/dimen_5"
                android:background="@drawable/spinner_bg"
                android:scaleType="centerCrop"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_image" />

            <TextView
                android:id="@+id/button_image"
                android:layout_width="@dimen/dimen_40"
                android:layout_height="@dimen/dimen_40"
                android:layout_marginHorizontal="@dimen/dimen_10"
                android:layout_marginTop="@dimen/dimen_5"
                android:background="@drawable/spinner_bg"
                android:gravity="center"
                android:paddingHorizontal="@dimen/dimen_10"
                android:paddingVertical="@dimen/dimen_5"
                android:text="@string/button_text"
                android:textColor="@color/white"
                app:layout_constraintLeft_toRightOf="@id/upload_image"
                app:layout_constraintTop_toBottomOf="@id/add_image" />

            <TextView
                android:id="@+id/add_document_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_15"
                android:layout_marginTop="@dimen/dimen_6"
                android:text="@string/add_document_for_verification"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_image" />

            <FrameLayout
                android:id="@+id/frame_add_document_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_15"
                android:layout_marginVertical="@dimen/dimen_10"
                android:background="@drawable/spinner_bg"
                android:padding="@dimen/dimen_5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_document_text">

                <TextView
                    android:id="@+id/add_document_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/button_text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_23"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/const_lay_doc_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/icon"
                        android:layout_width="@dimen/dimen_30"
                        android:layout_height="@dimen/dimen_30"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="@dimen/dimen_10"
                        android:layout_marginTop="@dimen/dimen_3"
                        android:src="@drawable/ic_document"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/doc_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dimen_15"
                        android:textColor="@color/white"
                        app:layout_constraintLeft_toRightOf="@id/icon"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/doc_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dimen_15"
                        android:textColor="@color/teal_200"
                        app:layout_constraintLeft_toRightOf="@id/icon"
                        app:layout_constraintTop_toBottomOf="@id/doc_title" />

                    <TextView
                        android:id="@+id/doc_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/dimen_20"
                        android:paddingVertical="@dimen/dimen_8"
                        android:text="@string/x"
                        android:textColor="@color/white"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>

            <Button
                android:id="@+id/create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_15"
                android:layout_marginVertical="@dimen/dimen_4"
                android:padding="@dimen/dimen_15"
                android:text="@string/create"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/frame_add_document_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>