<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragment3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/rev_in_process"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_30"
                android:layout_marginTop="@dimen/dimen_50"
                android:text="@string/review_in_process"
                android:textColor="@color/black"
                android:textSize="@dimen/text_24"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/be_patient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_30"
                android:layout_marginTop="@dimen/dimen_20"
                android:text="@string/thanks_for_creating"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rev_in_process" />

            <ImageView
                android:id="@+id/image_bg_rev_in_pro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_30"
                android:layout_marginTop="@dimen/dimen_20"
                android:src="@drawable/background_rev_in_pro"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/be_patient" />

            <Button
                android:id="@+id/btn_back_to_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:backgroundTint="@color/teal_700"
                android:paddingHorizontal="@dimen/dimen_100"
                android:text="@string/back_to_home"
                android:textAllCaps="false"
                android:textSize="@dimen/text_15"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_bg_rev_in_pro" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>